RESOLVED FIXED98214
WebImage::framesFromData should skip corrupted frames
https://bugs.webkit.org/show_bug.cgi?id=98214
Summary WebImage::framesFromData should skip corrupted frames
Peter Kotwicz
Reported 2012-10-02 16:57:00 PDT
WebImage::framesFromData should skip corrupted frames
Attachments
Patch (2.70 KB, patch)
2012-10-02 17:01 PDT, Peter Kotwicz
no flags
Patch (2.70 KB, patch)
2012-10-02 17:08 PDT, Peter Kotwicz
no flags
Peter Kotwicz
Comment 1 2012-10-02 17:01:17 PDT
WebKit Review Bot
Comment 2 2012-10-02 17:04:50 PDT
Attachment 166780 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peter Kotwicz
Comment 3 2012-10-02 17:08:38 PDT
Nico Weber
Comment 4 2012-10-02 20:19:17 PDT
lgtm, but I'm not a reviewer.
Adam Barth
Comment 5 2012-10-03 02:28:04 PDT
Comment on attachment 166781 [details] Patch ok
WebKit Review Bot
Comment 6 2012-10-03 02:48:28 PDT
Comment on attachment 166781 [details] Patch Clearing flags on attachment: 166781 Committed r130268: <http://trac.webkit.org/changeset/130268>
WebKit Review Bot
Comment 7 2012-10-03 02:48:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.