WebImage::framesFromData should skip corrupted frames https://bugs.webkit.org/show_bug.cgi?id=98214

Patch by Peter Kotwicz <pkotwicz@google.com> on 2012-10-03
Reviewed by Adam Barth.

WebImage::framesFromData() should only return bitmaps for valid frames
of a .ico file.

* src/WebImageSkia.cpp:
(WebKit::WebImage::framesFromData):
* tests/WebImageTest.cpp:
(WebKit::TEST):
(WebKit):
* tests/data/valid_header_missing_bitmap.ico: Added.

Canonical link: https://commits.webkit.org/116265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130268 268f45cc-cd09-0410-ab3c-d52691b4dbfc